* 2007-11-14 - thorben.betten@open-xchange.com

 - Bugfix #10167: Fixed imap-based sort

* 2007-11-13 - marcus.klein@open-xchange.com

 - Bugfix #10117: Fixed moving problems.

* 2007-11-09 - thorben.betten@open-xchange.com

 - Bugfix #10117: Checking for duplicates on folder creation/update/rename
 - Bugfix #10010: Decoding file attachment's file name when saving to
   infostore

* 2007-11-08 - thorben.betten@open-xchange.com

 - Bugfix #10053: Keeping original file data when attaching to mail
 - Bugfix #10121: Removed vulnerability for DOS attacks in AJP through
   keeping AJP connection alive on every exception

* 2007-11-07 - manuel.kraft@open-xchange.com

  - Bugfix ID#10050 Database leftovers of deleted contexts

* 2007-11-07 - thorben.betten@open-xchange.com

 - Bugfix #9966: Proper error message on exceeded quota on mail server

* 2007-11-06 - dennis.sieben@open-xchange.com

 - Bugfix #8919: [L3] 'checkconsistency' does not provide any usage information and
   does not work as well

* 2007-10-31 - ben.pahne@open-xchange.com

 - Bugfix #9996: Fixed replacing if special characters when converting
   plain text to html
 - Bugfix #9998: Catching runtime exception when converting TNEF read
   receipt or TNEF contact to common multipart object

* 2007-10-29 - ben.pahne@open-xchange.com

 - Fixed Bug 9975: Some connections didn't get closed during an error 
 
* 2007-10-29 - marcus.klein@open-xchange.com

 - Bugfix #9869: Set default upload quota to infinity.
 - Bugfix #9826: Properly set charset in Content-Type for configuration jump.

* 2007-10-29 - thorben.betten@open-xchange.com

 - Bugfix #9957: Fixed error message on exceeded quota when placing a copy
   into sent folder during message transport
 - Looking for QUOTA resource 'STORAGE' and logging other unsupported QUOTA
   resources
 - Updating message cache when selected mail is marked as seen

* 2007-10-26 - thorben.betten@open-xchange.com

 - Bugfix #9980: Proper check for table 'version'