@@ -263,6 +263,32 @@ public class OXFolderSQL {
 	 */
 	public static final int lookUpFolder(final int parent, final String folderName, final int module,
 			final Connection readConArg, final Context ctx) throws DBPoolingException, SQLException {
+		return lookUpFolderOnUpdate(-1, parent, folderName, module, readConArg, ctx);
+	}
+
+	/**
+	 * Checks for a duplicate folder in parental folder. A folder is treated as
+	 * a duplicate if name and module are equal.
+	 * 
+	 * @param folderId
+	 *            The ID of the folder whose is equal to given folder name (used
+	 *            on update). Set this parameter to <code>-1</code> to ignore.
+	 * @param parent
+	 *            The parent folder whose subfolders shall be looked up
+	 * @param folderName
+	 *            The folder name to look for
+	 * @param module
+	 *            The folder module
+	 * @param readConArg
+	 *            A readable connection (may be <code>null</code>)
+	 * @param ctx
+	 *            The context
+	 * @return The folder id or <tt>-1</tt> if none found
+	 * @throws DBPoolingException
+	 * @throws SQLException
+	 */
+	public static final int lookUpFolderOnUpdate(final int folderId, final int parent, final String folderName,
+			final int module, final Connection readConArg, final Context ctx) throws DBPoolingException, SQLException {
 		Connection readCon = readConArg;
 		boolean closeReadCon = false;
 		PreparedStatement stmt = null;
@@ -272,7 +298,8 @@ public class OXFolderSQL {
 				readCon = DBPool.pickup(ctx);
 				closeReadCon = true;
 			}
-			stmt = readCon.prepareStatement(SQL_LOOKUPFOLDER);
+			stmt = readCon.prepareStatement(folderId > 0 ? new StringBuilder(SQL_LOOKUPFOLDER).append(" AND fuid != ")
+					.append(folderId).toString() : SQL_LOOKUPFOLDER);
 			stmt.setInt(1, ctx.getContextId()); // cid
 			stmt.setInt(2, parent); // parent
 			stmt.setString(3, folderName); // fname
@@ -1413,10 +1440,8 @@ public class OXFolderSQL {
 			 * Merge
 			 */
 			final OCLPermission mergedPerm = new OCLPermission(mailAdmin, fuid);
-			mergedPerm.setFolderPermission(Math.max(adminPerm.getFolderPermission(), entityPerm
-					.getFolderPermission()));
-			mergedPerm.setReadObjectPermission(Math.max(adminPerm.getReadPermission(), entityPerm
-					.getReadPermission()));
+			mergedPerm.setFolderPermission(Math.max(adminPerm.getFolderPermission(), entityPerm.getFolderPermission()));
+			mergedPerm.setReadObjectPermission(Math.max(adminPerm.getReadPermission(), entityPerm.getReadPermission()));
 			mergedPerm.setWriteObjectPermission(Math.max(adminPerm.getWritePermission(), entityPerm
 					.getWritePermission()));
 			mergedPerm.setDeleteObjectPermission(Math.max(adminPerm.getDeletePermission(), entityPerm
